# ps_engine

./: .gitignore  CMakeLists.txt  Firebird - building hot-pluggable external functions.md  LICENSE  README.md  ps_engine.cmake  ps_module.cmake  so_test_load.cmake  test_pse.cmake
include/: meta_cache.h  ps_engine_iface.h
src/ps_engine/: fb_classes.h  linker_script.exp  ps_engine.cpp  ps_engine.h  ps_engine_main.cpp  pse_factory.h  pse_function.cpp  pse_function.h  pse_module.h  pse_xsi.h
src/ps_module/: ddl.sql  fb_iface.cpp  fb_iface.h  module_linker_script.exp  my_sum_args.cpp  my_sum_args.h  ps_module_main.cpp
test/: fbaccess.c  fbaccess.h
test/so_test/: so_test_load.c
test/test_pse/: pse_tests.c  pse_tests.h  test_config.c  test_config.h  test_helpers.c  test_helpers.h  test_master.c  test_master.h  test_pse.conf  test_pse_main.c  test_pse_times.sh
